# ttyms

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/: copilot-instructions.md
.github/workflows/: build.yml  publish.yml
pkg/aur/: .SRCINFO  PKGBUILD
pkg/aur-crates/: .SRCINFO  PKGBUILD
pkg/homebrew/: ttyms.rb
src/: app.rs  auth.rs  client.rs  config.rs  lib.rs  logging.rs  main.rs  models.rs  ui.rs
tests/: app_tests.rs  auth_tests.rs  logging_tests.rs  models_tests.rs
